2008-08-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmarshalers.list: get rid of the deprecated aliases NONE
	and BOOL.

	* gtk/gtkdialog.c
	* gtk/gtkentrycompletion.c
	* gtk/gtkmenuitem.c
	* gtk/gtkoldeditable.c
	* gtk/gtkrange.c
	* gtk/gtktreeview.c
	* gtk/gtkwidget.c: changed accordingly.

2008-08-13 Erwann Chenede - <erwann.chenede@sun.com>

	Bug 547456 - gdk/x11/gdkscreen-x11.c : init_solaris_xinerama 
	doesn't compile on Solaris

	* gdk/x11/gdkscreen-x11.c: make init_solaris_xinerama () compile 
	when HAVE_SOLARIS_XINERAMA is defined.

2008-08-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkstock.c (gtk_stock_lookup): cast the return value of
	g_dgettext() to fix warning about discarded qualifier.

2008-08-12  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkclipboard.c (gtk_clipboard_store):
	use canonical signal name.

2008-08-12  Paolo Borelli  <pborelli@katamail.com>

	Bug 526234 - make shift+ctrl+del delete till the end of line

	* gtk/gtktextview.c: add shift+ctrl+del and shift+ctrl+backspace
	keyboard shortcuts to delete to the end/start of the current line.

2008-08-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtklinkbutton.c (set_link_color): bail out if there is no
	label to set the color on.

	(gtk_link_button_add): call set_link_color() so the label gets
	the right color no matter how the link button is created.

2008-08-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkassistant.c: remove unused variable and fix formatting of
	some function headers.

2008-08-12  Michael Natterer  <mitch@imendio.com>

	* configure.in: define -DGDK_PIXBUF_DISABLE_DEPRECATED in the
	global CFLAGS.

	* gdk-pixbuf/Makefile.am: make the contents gdk-pixbuf-marshal.h
	visible for GDK_PIXBUF_COMPILATION.

	* contrib/gdk-pixbuf-xlib/Makefile.am
	* demos/Makefile.am
	* demos/gtk-demo/Makefile.am
	* gdk-pixbuf/pixops/Makefile.am
	* gdk/Makefile.am
	* gdk/x11/Makefile.am
	* gtk/Makefile.am
	* gtk/tests/Makefile.am
	* gtk/theme-bits/Makefile.am